Add more detail to the description field of pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: easy_permission_validator
-description: An easy way to use the PermissonHandler library.
-version: 1.0.2
+description: PermissonHandler is a package that manages permissions on Android and iOS, with this package you can find an easy way to use the PermissonHandler library.
+version: 1.0.3
 author: Ariel J. Martinez Viera <ariel.j.m.v@gmail.com>
 homepage: https://github.com/ajviera/easy_permission_validator
 
