--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: easy_permission_validator
 description: PermissonHandler is a package that manages permissions on Android and iOS, with this package you can find an easy way to use the PermissonHandler library.
-version: 1.0.7
+version: 1.0.8
 homepage: https://github.com/ajviera/easy_permission_validator
 
 environment:
   sdk: ">=2.5.0 <3.0.0"
-  flutter: ">=1.9.0"
+  flutter: ">=1.12.13+hotfix.8"
 
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^4.0.0
+  permission_handler: ^4.4.0
 
 dev_dependencies:
   flutter_test:
