--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: easy_permission_validator
 description: PermissonHandler is a package that manages permissions on Android and iOS, with this package you can find an easy way to use the PermissonHandler library.
-version: 1.0.8
+version: 2.0.0
 homepage: https://github.com/ajviera/easy_permission_validator
 
 environment:
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^4.4.0
+  permission_handler: ^5.0.0+hotfix.3
 
 dev_dependencies:
   flutter_test:
