--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,16 +1,16 @@
 name: easy_permission_validator
 description: PermissonHandler is a package that manages permissions on Android and iOS, with this package you can find an easy way to use the PermissonHandler library.
-version: 2.0.1
+version: 3.0.0
 homepage: https://github.com/ajviera/easy_permission_validator
 
 environment:
   sdk: ">=2.5.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.8"
+  flutter: ">=2.0.2"
 
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^5.0.1+1
+  permission_handler: ^6.1.1
 
 dev_dependencies:
   flutter_test:
