--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,12 +4,12 @@ version: 1.0.0+1
 
 publish_to: 'none'
 environment:
-  sdk: ">=2.5.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.4
 
   easy_permission_validator:
     path: ../
