--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,19 +4,20 @@ version: 1.0.0+1
 
 publish_to: 'none'
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  cupertino_icons: ^1.0.4
-
+  cupertino_icons: ^1.0.8
   easy_permission_validator:
     path: ../
+  flutter:
+    sdk: flutter
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^6.0.0
 
 flutter:
   uses-material-design: true
