--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,20 +2,21 @@ name: easy_permission_validator
 description: PermissonHandler is a package that manages permissions on Android
   and iOS, with this package you can find an easy way to use the
   PermissonHandler library.
-version: 4.0.0
+version: 5.0.1
 homepage: https://github.com/ajviera/easy_permission_validator
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=2.0.2"
+  sdk: "^3.3.0"
+  flutter: ">=3.22.3"
 
 dependencies:
   flutter:
     sdk: flutter
-  permission_handler: ^9.2.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^6.0.0
 
 flutter: null
